// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyPlugin basic should work with multi compiler mode: assets 1`] = `
Object {
  ".dottedfile": "dottedfile contents
",
  "directoryfile.txt": "new",
  "nested/deep-nested/deepnested.txt": "",
  "nested/nestedfile.txt": "",
}
`;

exports[`CopyPlugin basic should work with multi compiler mode: assets 2`] = `
Object {
  ".dottedfile": "dottedfile contents
",
  "directoryfile.txt": "new",
  "nested/deep-nested/deepnested.txt": "",
  "nested/nestedfile.txt": "",
}
`;

exports[`CopyPlugin basic should work with multi compiler mode: errors 1`] = `
Object {
  "push": [Function],
  Symbol(Symbol.iterator): [Function],
}
`;

exports[`CopyPlugin basic should work with multi compiler mode: errors 2`] = `
Object {
  "push": [Function],
  Symbol(Symbol.iterator): [Function],
}
`;

exports[`CopyPlugin basic should work with multi compiler mode: warnings 1`] = `
Object {
  "push": [Function],
  Symbol(Symbol.iterator): [Function],
}
`;

exports[`CopyPlugin basic should work with multi compiler mode: warnings 2`] = `
Object {
  "push": [Function],
  Symbol(Symbol.iterator): [Function],
}
`;

exports[`CopyPlugin stats should minify: assets 1`] = `
Object {
  "asset-modules/deepnested.txt": "",
  "unoptimized.js": "let a=1;console.log(1);",
}
`;

exports[`CopyPlugin stats should not minify: assets 1`] = `
Object {
  "asset-modules/deepnested.txt": "",
  "unoptimized.js": "const a = 1;
console.log(a);
",
}
`;
